Fix 3 after PR#2